--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <meta charset="utf-8">
+    <title>San Diego Top Spots</title>
+    <link rel="stylesheet" href="main.css" type="text/css"/>
+    <meta charset="utf-8">    
 </head>
 
 <body>
     <!-- Write your markup here -->
-
     <!-- Don't forget to add your <script> tag here -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script type="text/javascript" src="data.json"></script>
+        
+        <h1>San Diego Top Spots</h1>
+        <table id="dataTable" class="table">
+                <th>Name</th>
+                <th>Description</th>
+                <th>Location</th>
+        </table>
+        <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
